[package]
name = "queitite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
ordered-float = "5.1.0"
rand = "0.9.2"
ratatui = "0.29.0"
rustc-hash = "2.1.1"
strum = { version = "0.27", features = ["derive"] }
winit = "0.28.7"
pixels = "0.14.0"
once_cell = "1.19.0"
tiny-skia = "0.11"
reedline = "0.44.0"
nu-ansi-term = "0.50.3"
termimad = "0.34.1"
minus = { version = "5.6.1", features = ["static_output"] }
